--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
+body {
+  background-color: #661414;
+  background-size: 20px 20px;
+  color: white;
+  /* width: 391px; */
+  margin: 0px;
+  padding: 0px;
+}
+
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.card {
+  margin: 15px 0px;
+  /* display: inline-block !important; */
+  padding: 0;
+  width: -moz-fit-content;
+  /* width: fit-content; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: inherit;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
+.flippy-front,
+.flippy-back {
+  padding: 0px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.flipImage {
+  object-fit: cover;
+  object-position: 85% 50%;
+  border-radius: 5px;
+  width: 83px;
+  height: 140px;
+}
+
+.winFlipImage {
+  border-radius: 5px;
+  position: absolute;
+  background-color: rgb(255, 239, 0);
+  width: 83px;
+  height: 140px;
+  opacity: 0.5;
+}
+
+.containerFlipImage {
+  box-shadow: rgba(0, 0, 0, 0.46) 4px 6px 10px;
+  border-radius: 5px;
+}
+
+.containerFrontSide {
+  box-shadow: rgba(0, 0, 0, 0.46) 4px 6px 10px;
+  border-radius: 5px;
+  background-color: #41669d;
+}
+
+.backCardImage {
+  border-radius: 5px;
+  width: 83px;
+  height: 140px;
+}
+
+.flippyContainer {
+  width: fit-content;
+}
+
+.row {
+  padding: 0 25%;
+}
+
+h1 {
+  font-family: cursive;
+  color: black;
+  border-bottom: 2px solid black;
+  background-color: #3f89e724;
+}
+
+button {
+  background-color: #00a8ffcf;
+  color: black;
+  width: 15%;
+  border-radius: 5px;
+  /* height: 13%; */
+  border: none;
+  margin: 5% 0;
+  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 30%), 0 6px 20px 0 rgb(0 0 0 / 30%);
 }
