--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   background-color: #661414;
   background-size: 20px 20px;
@@ -80,10 +86,21 @@ h1 {
 button {
   background-color: #00a8ffcf;
   color: black;
-  width: 15%;
   border-radius: 5px;
   /* height: 13%; */
   border: none;
   margin: 5% 0;
   box-shadow: 0 8px 16px 0 rgb(0 0 0 / 30%), 0 6px 20px 0 rgb(0 0 0 / 30%);
+}
+
+@media only screen and (max-width: 726px) {
+  .row {
+    padding: 0 5%;
+  }
+  .backCardImage,
+  .flipImage,
+  .winFlipImage {
+    width: 60px;
+    height: 100px;
+  }
 }
