--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  background-color: #661414;
+  background-color: #899faf;
   background-size: 20px 20px;
   color: white;
   /* width: 391px; */
